--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
                     </li>
                     -->
                 </ul>
+                <!--
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
+                -->
                 </div>
             </nav>
             <!-- End of navbar -->
@@ -81,6 +83,11 @@
             <div class="mapDiv">
                 <div id="mapid" ></div>
                 <!--<div id="spinner">hello</div>-->
+                <!--<div id=”preloader”></div>-->
+                <div class="loaderDiv">
+                    <div class="loader">Loading...</div>
+                    <p>Loading...</p>
+                </div>
                 <div id="mapInfo">
                     <table class="mapInfoTbl">
                         <tr>
