--- a/index.html
+++ b/index.html
@@ -111,6 +111,18 @@
                         <tr>
                             <th>Currency Code</th><td id="mapInfoCurrency"></td>
                         </tr>
+                        <tr>
+                            <th>Currency Conversion</th>
+                            <td id="mapInfoConversion">
+                                <select id="CurrencyDropDown" >
+                            
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>Foreign Currency Exchange Rate</th><td id="mapInfoExRate"></td>
+                        </tr>
+
                     </table>
                 </div>
                 
