sync index.html with last push

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <th>Currency Code</th><td id="mapInfoCurrency"></td>
                         </tr>
                         <tr>
-                            <th>Currency Conversion</th>
+                            <th>Select country </th>
                             <td id="mapInfoConversion">
                                 <select id="CurrencyDropDown" >
                             
