--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <th>Currency Code</th><td id="mapInfoCurrency"></td>
                         </tr>
                         <tr>
-                            <th>Select country </th>
+                            <th>Select Country </th>
                             <td id="mapInfoConversion">
                                 <select id="CurrencyDropDown" >
                             
@@ -120,7 +120,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <th>Foreign Currency Exchange Rate</th><td id="mapInfoExRate"></td>
+                            <th>Exchange Rate ($1 USD)</th><td id="mapInfoExRate"></td>
                         </tr>
 
                     </table>
