--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="CountriesDropDownListDiv">
                     <select class="CountriesDropDownList" id="navDropDown" >
-                                
+                                <option class="option"></option>
                     </select>
                 </div>
                 <div id="countryData" class="modal" tabindex="-1">
