--- a/index.html
+++ b/index.html
@@ -208,39 +208,41 @@
                   <div class="modal-dialog">
                     <div class="modal-content countryDataDiv">
                       <div class="modal-header">
-                        <h5 id="openTripLandmarkName" class="modal-title"></h5>
+                        <h5 id="openTripLandmarkName" class="modal-title white"></h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                         </button>
                       </div>
                       <div class="modal-body">
                           <div id='openTripDataImageDiv'></div>
-                          <table class="table table-striped table-dark">
-                              <tbody id="openTripDataTable">
-                                <tr>
-                                  <th>Address</th>
-                                  <td><p id=openTripDataAddress></p></td>
-                                </tr>
+                          <!--<div class="table-responsive">-->
+                            <table class="table table-striped table-dark myTable">
+                                <tbody id="openTripDataTable">
                                   <tr>
-                                    <th>Wiki</th>
-                                    <td>
-                                      <p id='openTripDataWikiEx'></p>
-                                      <a id='openTripDataWiki' target="_blank">   Read More...</a></td>
+                                    <th>Address</th>
+                                    <td><p id=openTripDataAddress></p></td>
                                   </tr>
-                                  <tr>
-                                    <th>Latitude</th>
-                                    <td id='openTripDataLatitude'></td>
-                                  </tr>
-                                  <tr>
-                                    <th>Longitude</th>
-                                    <td id='openTripDataLongitude'></td>
-                                  </tr>
-                                  <tr>
-                                    <th>Open Trip Map</th>
-                                    <td><a id="openTripDataAnchor"></a></td>
-                                  </tr>
-                              </tbody>
-                          </table>
+                                    <tr>
+                                      <th>Wiki</th>
+                                      <td>
+                                        <p id='openTripDataWikiEx'></p>
+                                        <a id='openTripDataWiki' target="_blank">   Read More...</a></td>
+                                    </tr>
+                                    <tr>
+                                      <th>Latitude</th>
+                                      <td id='openTripDataLatitude'></td>
+                                    </tr>
+                                    <tr>
+                                      <th>Longitude</th>
+                                      <td id='openTripDataLongitude'></td>
+                                    </tr>
+                                    <tr>
+                                      <th>Open Trip Map</th>
+                                      <td><a id="openTripDataAnchor"></a></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                          <!--</div>-->
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
