--- a/index.html
+++ b/index.html
@@ -374,8 +374,7 @@
         <script type="application/javascript" src="JS/jquery-2.2.3.min.js"></script>
         <script type="application/javascript" src="Bootstrap/js/bootstrap.bundle.min.js"></script>
 
-        jquery-ui.min
-        <script type="text/javascript" src="JS/jquery-ui.min.js"></script>
+        <!--<script type="text/javascript" src="JS/jquery-ui.min.js"></script>-->
         <script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
         <script src='//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/d3.min.js'></script>
         <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
